# inkspire-workflow

./: README.md  agent_a.json  posted_receipts.json  preview.json  prompts.ipynb  pyproject.toml  requirements.txt  skipped_annotations.json
inkspire/: cleaner.py  cli.py  config.py  generator copy.py  generator.py  locator.py  perusall_api.py  pipeline.py
inkspire.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
inkspire/prompts/: assignment.txt  course.txt  course_level_system.txt  reading_level_user.txt
